@startuml

title __P1's Class Diagram__\n

  namespace JDBC {
    class JDBC.AuthenticationDao {
    }
  }
  

  namespace JDBC {
    class JDBC.ConnectionManager {
    }
  }
  

  namespace JDBC {
    class JDBC.EmployeeDao {
    }
  }
  

  namespace JDBC {
    class JDBC.ReimbursementDao {
    }
  }
  

  namespace Model {
    class Model.BankAccount {
    }
  }
  

  namespace Model {
    class Model.Employee {
    }
  }
  

  namespace Model {
    class Model.EmployeeResponse {
    }
  }
  

  namespace Model {
    class Model.Manager {
    }
  }
  

  namespace Model {
    class Model.Reimbursement {
    }
  }
  

  namespace Model {
    class Model.ReimbursementResponse {
    }
  }
  

  namespace Model {
    class Model.User {
    }
  }
  

  namespace Service {
    class Service.EmployeeService {
    }
  }
  

  namespace Service {
    class Service.ManagerService {
    }
  }
  

  namespace Servlet {
    class Servlet.ContextListener {
    }
  }
  

  namespace Servlet {
    class Servlet.EmployeeAuthenticationServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.EmployeeLogoutServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerAuthenticationServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerLogoutServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerViewAllEmployeeServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerViewReimbursementServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ProcessReimbursementRequestServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ReimbursementRequestServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ViewEmployeeServlet {
    }
  }
  

  namespace Servlet {
    class Servlet.ViewReimbursementRequestEmployee {
    }
  }
  

  JDBC.AuthenticationDao o-- JDBC.ConnectionManager : cm
  JDBC.EmployeeDao o-- JDBC.ConnectionManager : cm
  JDBC.ReimbursementDao o-- JDBC.ConnectionManager : cm
  Model.Employee -up-|> Model.User
  Model.Manager -up-|> Model.User
  Service.EmployeeService o-- JDBC.AuthenticationDao : authenticationDao
  Service.EmployeeService o-- JDBC.EmployeeDao : employeeDao
  Service.EmployeeService o-- JDBC.ReimbursementDao : reimbursementDao
  Service.ManagerService o-- JDBC.AuthenticationDao : authenticationDao
  Service.ManagerService o-- JDBC.EmployeeDao : employeeDao
  Service.ManagerService o-- JDBC.ReimbursementDao : reimbursementDao
  Servlet.ContextListener .up.|> javax.servlet.ServletContextListener
  Servlet.EmployeeAuthenticationServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.EmployeeLogoutServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerAuthenticationServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerLogoutServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerViewAllEmployeeServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerViewReimbursementServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ProcessReimbursementRequestServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ReimbursementRequestServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ViewEmployeeServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ViewReimbursementRequestEmployee -up-|> javax.servlet.http.HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
